typescript/checker/tests/conformance/Symbols/ES5SymbolProperty4.ts.stderr
error: NonSymbolTypedFieldFromSymbol {
    span: Span {
        lo: BytePos(
            65,
        ),
        hi: BytePos(
            80,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/Symbols/ES5SymbolProperty4.ts:5:6
  |
5 |     [Symbol.iterator]() { }
  |      ^^^^^^^^^^^^^^^

